# freecord

./: .env.example  .gitignore  README.md
backend_fastapi/: auth.py  database.py  main.py  models.py  requirements.txt  schemas.py  ws_manager.py
backend_fastapi/routes/: auth_routes.py  channel_routes.py  dm_routes.py  friend_routes.py  invite_routes.py  message_routes.py  moderation_routes.py  notification_routes.py  server_routes.py
frontend_flask/: app.py
frontend_flask/static/: style.css
frontend_flask/templates/: base.html  channel.html  dashboard.html  dm_chat.html  dms.html  friends.html  login.html  register.html  server.html  settings.html
rust_encryption_service/: Cargo.toml
rust_encryption_service/src/: main.rs
scripts/: .pids  run_linux.sh  run_mac.sh  run_windows.bat  stop_linux.sh  stop_mac.sh  stop_windows.bat
