[package]
name = "rust_encryption_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
